<?xml version="1.0" encoding="UTF-8"?>
<resources>

	<string name="app_name">CSU Vikings</string>
	<string name="menu_about">About</string>
	<string name="title_activity_home">CSU Vikings</string>
	<string name="calendar">Academic Calendar</string>
	<string name="campus_411">Campus 411</string>
	<string name="map">Campus Map</string>
	<string name="news">Campus News</string>
	<string name="fight_song">CSU Fight Song</string>
	<string name="tech">CSU Technology</string>
	<string name="dining">Dining</string>
	<string name="social">Social Network</string>
	<string name="parking">Parking</string>
	<string name="four_one_one_about">Campus 411 is a one-stop service center
		that can
		assist you with any questions regarding your admission,
		academic
		record, financial aid, registration, and your student
		account.
	</string>
	<string name="four_one_one_mission">Our mission is to provide a centralized
		location
		where the University community is effectively and efficiently
		served,
		resolve issues in support of educational goals,
		and empower students to
		manage their academic life.
	</string>
	<string name="fight_filler">The lyrics to the "The Pride of Cleveland"
		and a
		play/pause button for the fight song to be played.
	</string>
	<string name="social_filler">Page of text with links to all of
		their social
		network accounts.
	</string>
	<string name="view_411_on_map_button_text">View Campus 411 on map</string>
	<string name="call_411">Call campus 411!</string>
	<string name="map_list_title">CSU Buildings</string>
	<string name="parking_lots">Parking Lots</string>
	<string name="call_center1">The Call Center is your first stop for
		troubleshooting or to answer computer related questions. Call us with
		your questions to request service!
	</string>
	<string name="call_center2">If you have an issue with a computer - either
		hardware or software - call the Call Center. If we can\'t help you
		immediately, we will have someone contact you.
	</string>
	<string name="email_call_center">Email the Call Center</string>
	<string name="call_call_center">Call the Call Center</string>
	<string name="call_center">CSU Call Center</string>
	<string name="connection_lounges">Campus Connection Lounges</string>
	<string name="connection_lounges_text">Casual computing in a relaxed
		environment. Your
		technology fees at work!
		Two locations to serve you better.
	</string>
	<string name="connection_lounges_hours">Hours:
		\nMonday - Thursday: 7:30 AM to 10:00 PM
		\nFriday &amp; Saturday: 7:30 AM to 5:00 PM
		\nSunday: Closed
	</string>
	<string name="main_classroom_lounge">Main Classroom Lounge</string>
	<string name="student_center_lounge">Student Center Lounge</string>
	<string name="general_computer_labs">General Computer Labs</string>
	<string name="business_computer_lab">Business College Computer Lab</string>
	<string name="business_computer_lab_text">Business College - BU 23</string>
	<string name="business_computer_lab_hours">Hours:
		\nMonday - Thursday: 7:30 AM to 10:00 PM
		\nFriday: 7:30 AM to 9:30 PM
		\nSaturday &amp; Sunday: 9:00 AM to 5:30
		PM
	</string>
	<string name="fenn_tower_computer_lab">Fenn Tower Computer Lab</string>
	<string name="fenn_tower_computer_lab_text">Fenn Tower - FT 103</string>
	<string name="fenn_tower_computer_lab_hours">Hours:
		\nAll week: 8:00 AM to 8:00 PM
	</string>
	<string name="stilwell_hall_computer_lab">Stilwell Hall Computer Lab</string>
	<string name="stilwell_hall_computer_lab_text">Stilwell Hall - SH 128</string>
	<string name="stilwell_hall_computer_lab_hours">Hours:
		\nMonday - Thursday: 7:30 AM to 9:30 PM
		\nFriday: 7:30 AM to 5:30 PM
		\nSaturday &amp; Sunday: Closed
	</string>
	<string name="urban_affairs_computer_lab">Urban Affairs Computer Lab</string>
	<string name="urban_affairs_computer_lab_text">Urban Affairs Building - UR 39/40</string>
	<string name="urban_affairs_computer_lab_hours">Hours:
		\nMonday - Thursday: 8:00 AM to 10:00 PM
		\nFriday &amp; Saturday: 8:00 AM to 6:00 PM
		\nSunday: Closed
	</string>
	<string name="mobile_campus">Mobile Campus</string>
	<string name="mobile_campus_text">Currently registered students of Cleveland State
		University may check out a laptop computer or an iPad for on-campus
		use. Over 300 laptops and 40 iPads are available on a
		first-come/first-served basis (reservations are not
		accepted).\n\nLaptops and iPads may be borrowed for a 5 hour period of
		time or until one hour before closing, which ever is shorter.
	</string>
	<string name="mobile_campus_hours">Hours:
		\nMonday - Thursday: 7:30 AM to 10:00 PM
		\nFriday: 7:30 AM to 6:00 PM
		\nSaturday: 8:00 AM to 5:00 PM
		\nSunday: Closed
	</string>
	<string name="mobile_email">Mobile Email</string>
	<string name="reset_password">Password Reset</string>
	<string name="fight_song_title">The Pride of Cleveland</string>
	<string name="fight_song_text">O hail the Green and White,
		\nfor our colors we shall fight!
		\nTo battle, Vikings all,
		\nWe\'ll sound the Viking trumpet call!
		\n
		\nWe always will defend
		\nThe Pride of Cleveland faithfully;
		\nFor Cleveland State we\'ll fight on to a victory!
	</string>
	<string name="fight_song_play_button">Play the Fight Song!</string>
	<string name="fight_song_stop_button">Stop</string>
	<string name="student_center_first_label">Student Center First Floor</string>
	<string name="student_center_second_label">Student Center Second Floor</string>
	<string name="satellite_view">Satellite View</string>
	<string name="map_view">Map View</string>
	<string name="navigation_title">Navigation</string>
	<string name="navigate">Navigate to\u0020</string>
	<string name="question_mark">\?</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	
	
	<string-array 
	    name="csu_buildings" >
	    <item>AMC Annex</item>
	    <item>AMC Annex</item>
	    <item>Art College</item>
	    <item>Business College</item>
	    <item>Campus 411</item>
	    <item>Campus Safety</item>
	    <item>Chester Building</item>
	    <item>Chester Building Annex</item>
	    <item>Cole Center</item>
	    <item>Euclid Commons</item>
	    <item>Fenn Tower</item>
	    <item>Health Sciences</item>
	    <item>Heritage Hall</item>
	    <item>Julka Hall</item>
	    <item>Keith Building</item>
	    <item>Law Building</item>
	    <item>Law Library</item>
	    <item>MAGNET Building</item>
	    <item>Main Classroom</item>
	    <item>Mather Mansion</item>
	    <item>Michael Schwartz Library</item>
	    <item>Music &amp; Communication</item>
	    <item>Parker Hannifin Hall</item>
	    <item>Parker Hannifin Administration Center</item>
	    <item>Physical Education</item>
	    <item>Plant Annex</item>
	    <item>Plant Services</item>
	    <item>Recreation Center</item>
	    <item>Rhodes Tower</item>
	    <item>Rhodes West</item>
	    <item>Science and Research</item>
	    <item>Science Building</item>
	    <item>Stilwell Hall</item>
	    <item>Student Center</item>
	    <item>Urban Affairs Building</item>
	    <item>Viking Hall</item>
	    <item>West Center</item>
	    <item>Wolstein Center</item>
	    <item>Wolstein Center Pavillion &amp; Banquet Center</item>
	</string-array>
	
	<string-array 
	    name="csu_technology" >
	    <item>Call Center</item>
	    <item>Connection Lounges</item>
	    <item>General Computer Labs</item>
	    <item>Mobile Campus</item>
	    <item>Mobile Email</item>
	    <item>Reset Password</item>
	    <item>Wireless</item>
	</string-array>
	
	<string-array 
	    name="general_computer_labs" >
	    <item>Business Lab</item>
	    <item>Fenn Tower Lab</item>
	    <item>Stilwell Hall Lab</item>
	    <item>Urban Affairs Lab</item>
	</string-array>
	
	<string-array 
	    name="parking" >
	    <item>Lot 10</item>
	    <item>Lot 11</item>
	    <item>Lot 20</item>
	    <item>Lot 21</item>
	    <item>Lot 22</item>
	    <item>Lot 40</item>
	    <item>Lot 50</item>
	    <item>Lot 51</item>
	    <item>Lot 54</item>
	    <item>Lot 57</item>
	    <item>Lot 61</item>
	    <item>Lot 62</item>
	    <item>Lot 80</item>
	    <item>Lot 90</item>
	    <item>Lot CG</item>
	    <item>Lot EG</item>
	    <item>Lot MG</item>
	    <item>Lot PG</item>
	    <item>Lot SG</item>
	    <item>Lot RG</item>
	    <item>Lot UG</item>
	    <item>Lot WG</item>
	</string-array>
	
	<string-array
	    name="dining" >
	    <item>Atrium Cafe</item>
	    <item>Au Bon Pain</item>
	    <item>Bar UNO</item>
	    <item>Chop\'d &amp; Wrap\'d</item>
	    <item>Fenn Shoppe</item>
	    <item>GrillNation</item>
	    <item>Outtakes</item>
	    <item>Papa John\'s Pizza</item>
		<item>Quizno\'s</item>
		<item>The Link</item>
		<item>The Strip</item>
		<item>Viking Marketplace</item>
		<item>Wheat Street Deli</item>
	</string-array>

</resources>