<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="10dp"
        android:textSize="18sp"
        android:text="@string/call_center1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:text="@string/call_center2" />

    <Button
        android:id="@+id/email_call_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:text="@string/email_call_center" />

    <Button
        android:id="@+id/call_call_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_call_center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/call_call_center" />

</RelativeLayout>