<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="10dp"
        android:textSize="18sp"
        android:text="@string/connection_lounges_text" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:text="@string/connection_lounges_hours" />

    <Button
        android:id="@+id/main_classroom_lounge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:text="@string/main_classroom_lounge" />

    <Button
        android:id="@+id/student_center_lounge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_classroom_lounge"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/student_center_lounge" />

</RelativeLayout>